challenge-22/err.txt
challenge-22-unittest.cpp: In function ‘void unittest()’:
challenge-22-unittest.cpp:196:27: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
  stringList.insert("hello");
                           ^
In file included from challenge-22-unittest.cpp:5:0:
SList.h:79:14: error:   initializing argument 1 of ‘void SList<sl>::insert(int) [with sl = std::basic_string<char>]’ [-fpermissive]
         void insert (int node){
              ^
challenge-22-unittest.cpp:205:27: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
  stringList.insert("hello");
                           ^
In file included from challenge-22-unittest.cpp:5:0:
SList.h:79:14: error:   initializing argument 1 of ‘void SList<sl>::insert(int) [with sl = std::basic_string<char>]’ [-fpermissive]
         void insert (int node){
              ^
challenge-22-unittest.cpp:214:28: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
  stringList.insert("mellow");
                            ^
In file included from challenge-22-unittest.cpp:5:0:
SList.h:79:14: error:   initializing argument 1 of ‘void SList<sl>::insert(int) [with sl = std::basic_string<char>]’ [-fpermissive]
         void insert (int node){
              ^
challenge-22-unittest.cpp:223:28: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
  stringList.insert("mellow");
                            ^
In file included from challenge-22-unittest.cpp:5:0:
SList.h:79:14: error:   initializing argument 1 of ‘void SList<sl>::insert(int) [with sl = std::basic_string<char>]’ [-fpermissive]
         void insert (int node){
              ^
challenge-22-unittest.cpp:232:27: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
  stringList.insert("jello");
                           ^
In file included from challenge-22-unittest.cpp:5:0:
SList.h:79:14: error:   initializing argument 1 of ‘void SList<sl>::insert(int) [with sl = std::basic_string<char>]’ [-fpermissive]
         void insert (int node){
              ^
challenge-22-unittest.cpp:241:31: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
  stringList.insertHead("cello");
                               ^
In file included from challenge-22-unittest.cpp:5:0:
SList.h:31:14: error:   initializing argument 1 of ‘void SList<sl>::insertHead(int) [with sl = std::basic_string<char>]’ [-fpermissive]
         void insertHead(int nodeVal){
              ^
challenge-22-unittest.cpp:250:32: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
  stringList.insertTail("yellow");
                                ^
In file included from challenge-22-unittest.cpp:5:0:
SList.h:38:14: error:   initializing argument 1 of ‘void SList<sl>::insertTail(int) [with sl = std::basic_string<char>]’ [-fpermissive]
         void insertTail(int nodeVal){
              ^
challenge-22-unittest.cpp:260:49: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
   btassert<bool>(stringList.removeFirst("fellow") == false);
                                                 ^
In file included from challenge-22-unittest.cpp:5:0:
SList.h:108:14: error:   initializing argument 1 of ‘bool SList<sl>::removeFirst(int) [with sl = std::basic_string<char>]’ [-fpermissive]
         bool removeFirst (int first){
              ^
challenge-22-unittest.cpp:268:47: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
   btassert<bool>(stringList.removeAll("bellow") == false);
                                               ^
In file included from challenge-22-unittest.cpp:5:0:
SList.h:128:14: error:   initializing argument 1 of ‘bool SList<sl>::removeAll(int) [with sl = std::basic_string<char>]’ [-fpermissive]
         bool removeAll(int value){
              ^
challenge-22-unittest.cpp:276:48: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
   btassert<bool>(stringList.removeFirst("hello") == true && stringList.getSize() == 6 && stringList.toString() == "cello,hello,jello,mellow,mellow,yellow");
                                                ^
In file included from challenge-22-unittest.cpp:5:0:
SList.h:108:14: error:   initializing argument 1 of ‘bool SList<sl>::removeFirst(int) [with sl = std::basic_string<char>]’ [-fpermissive]
         bool removeFirst (int first){
              ^
challenge-22-unittest.cpp:284:47: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
   btassert<bool>(stringList.removeAll("mellow") == true && stringList.getSize() == 4 && stringList.toString() == "cello,hello,jello,yellow");
                                               ^
In file included from challenge-22-unittest.cpp:5:0:
SList.h:128:14: error:   initializing argument 1 of ‘bool SList<sl>::removeAll(int) [with sl = std::basic_string<char>]’ [-fpermissive]
         bool removeAll(int value){
              ^
make: *** [challenge-22-unittest.o] Error 1
